--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
                 top: 110%;
             }
         }
+        @media (max-width: 600px) {
+    .center-box {
+        width: 90%; /* Adjust the box width on smaller screens */
+        padding: 10px; /* Reduce padding for more space */
+    }
+
+    .questionnaire button {
+        padding: 8px 16px; /* Adjust button padding for smaller screens */
+        font-size: 14px; /* Adjust font size for readability */
+    }
+
+    .next, .be-my-valentine {
+        padding: 8px 16px; /* Ensure consistency in button sizing */
+    }
+}
         .center-box {
             position: relative;
             width: 400px;
